Update ChatSmith.java